--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,8 +24,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/loading.css" />
   </head>
   <body>
+    <div id="loading">
+      <div class="spinner-border text-success" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
     <div class="container">
       <div class="topbar d-flex justify-content-between align-items-center">
         <div class="topbar__select">
