--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -36,6 +36,9 @@
           <span style="font-size: 24px; line-height: 24px">+</span>
           Add product
         </button>
+
+        <a href="./index.html">Go to User page</a>
+
         <!-- <div class="input-group m-0" style="width: 360px">
           <input
             type="text"
