--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,15 +42,20 @@
             <option value="samsung">Samsung</option>
           </select>
         </div>
+        <div class="d-flex">
+          <div class="mr-4">
+            <a href="./admin.html">Go to Admin page</a>
+          </div>
 
-        <!-- Button trigger modal -->
-        <div
-          class="topbar__cart"
-          data-toggle="modal"
-          data-target="#cart__modal"
-        >
-          <i class="fa fa-shopping-cart"></i>
-          <div class="cart-quantity" id="cart-quantity"></div>
+          <!-- Button trigger modal -->
+          <div
+            class="topbar__cart"
+            data-toggle="modal"
+            data-target="#cart__modal"
+          >
+            <i class="fa fa-shopping-cart"></i>
+            <div class="cart-quantity" id="cart-quantity"></div>
+          </div>
         </div>
       </div>
       <div class="cardList row" id="cardList"></div>
