--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>admin - danh sach san pham</title>
+    <title>admin - jammie</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="py-4 container">
-      <h2 class="text-center text-primary">MYSHOP - ADMIN</h2>
+      <h2 class="text-center text-primary">admin - jammie</h2>
       <div class="my-4 d-flex justify-content-between">
         <button
           id="btn-add-product"
