--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>MY SHOP</title>
+  <title>jammie</title>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -25,7 +25,7 @@
   </div>
   <div class="topbar d-flex justify-content-between align-items-center">
     <div>
-      <a href="#" style="font-size: 24px; font-weight: bold; text-decoration: none;">My shop</a>
+      <a href="#" style="font-size: 24px; font-weight: bold; text-decoration: none;">jammie</a>
     </div>
     <!-- <div class="topbar__select">
         <label class="" for="selectType">Filter:</label>
