--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -120,7 +120,7 @@
                 name=""
                 id="name"
                 aria-describedby="helpId"
-                placeholder="name"
+                placeholder="Tên sản phẩm"
               />
               <span class="text-danger" id="span-name"></span>
             </div>
