--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,8 +24,8 @@
     </div>
   </div>
   <div class="topbar d-flex justify-content-between align-items-center">
-    <div>
-      <a href="#" style="font-size: 24px; font-weight: bold; text-decoration: none;">jammie</a>
+    <div class="topbar__img">
+      <a href="#"><img src="https://i.im.ge/2022/10/15/2IZUUh.avt.png" height="160px" alt="logo"></a>
     </div>
     <!-- <div class="topbar__select">
         <label class="" for="selectType">Filter:</label>
