--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,12 @@
 .topbar {
     height: 68px;
-    padding: 0 80px;
-    border-bottom: 1px solid gray;
+    padding: 0 140px;
+    /* border-bottom: 1px solid gray; */
+    position: relative;
+}
+.topbar__img {
+    position: relative;
+    top: 50px;
 }
 .topbar__select {
     min-width: 300px;
@@ -20,7 +25,7 @@
     opacity: 0.7;
 }
 .topbar__cart i {
-    color: green;
+    color: rgb(31, 43, 100);
     font-size: 30px;
 }
 
@@ -82,10 +87,10 @@
 }
 .card__top i {
     font-size: 18px;
-    color: green;
+    color: rgb(31, 43, 100);
 }
 .card__top span {
-    color: green;
+    color: rgb(31, 43, 100);
     font-size: 14px;
     font-style: italic;
 }
@@ -144,10 +149,20 @@
 .card__details .product-price {
     font-size: 20px;
     line-height: 40px;
-    color: green;
+    color: rgb(31, 43, 100);
     font-weight: bolder;
 }
 
+.btn-success {
+    background-color: #5184d9;
+    border-color: #5184d9;
+}
+
+.btn-success:hover {
+    background-color: #5184d9;
+    border-color: #5184d9;
+    opacity: 0.8;
+}
 
 /* cart modal */
 @media (min-width: 576px) {
