--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,20 +25,13 @@
   </div>
   <div class="topbar d-flex justify-content-between align-items-center">
     <div class="topbar__img">
-      <a href="#"><img src="https://i.im.ge/2022/10/15/2IZUUh.avt.png" height="160px" alt="logo"></a>
+      <a href="#"><img src="https://i.im.ge/2022/10/15/2IZJmK.avt.png" height="100px" alt="logo"></a>
     </div>
-    <!-- <div class="topbar__select">
-        <label class="" for="selectType">Filter:</label>
-        <select onchange="selectType()" class="custom-select" id="selectType">
-          <option selected value="all">All</option>
-          <option value="iphone">Iphone</option>
-          <option value="samsung">Samsung</option>
-        </select>
-      </div> -->
     <div class="d-flex">
-      <!-- <div class="mr-4">
-          <a href="./admin.html">Go to Admin page</a>
-        </div> -->
+      <div class="mr-4">
+        <a style="color: rgb(31, 43, 100)" class="mr-3" href="#">Home</a>
+        <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/aboutus.html">About us</a>
+      </div>
 
       <!-- Button trigger modal -->
       <div class="topbar__cart" data-toggle="modal" data-target="#cart__modal">
