--- a/app/views/aboutus.html
+++ b/app/views/aboutus.html
@@ -23,8 +23,8 @@
         </div>
         <div class="d-flex">
             <div class="mr-4">
-                <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/">Home</a>
-                <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/aboutus.html">About us</a>
+                <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/">Trang chủ</a>
+                <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/">Giới thiệu</a>
             </div>
 
             <!-- Button trigger modal -->
