--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,8 +29,8 @@
     </div>
     <div class="d-flex">
       <div class="mr-4">
-        <a style="color: rgb(31, 43, 100)" class="mr-3" href="#">Home</a>
-        <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/aboutus.html">About us</a>
+        <a style="color: rgb(31, 43, 100)" class="mr-3" href="#">Trang chủ</a>
+        <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/aboutus.html">Giới thiệu</a>
       </div>
 
       <!-- Button trigger modal -->
