--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
     <div class="d-flex">
       <div class="mr-4">
         <a style="color: rgb(31, 43, 100)" class="mr-3" href="#">Trang chủ</a>
-        <a style="color: rgb(31, 43, 100)" class="mr-3" href="/app/views/aboutus.html">Giới thiệu</a>
+        <a style="color: rgb(31, 43, 100)" class="mr-3" href="#">Giới thiệu</a>
       </div>
 
       <!-- Button trigger modal -->
